cmake_minimum_required(VERSION 3.14)
project(huffman)

set(CMAKE_CXX_STANDARD 14)

add_executable(huffman main.cpp HuffmanTree.cpp HuffmanTree.h HuffmanCoding.cpp HuffmanCoding.h ../my_String/my_string.cpp ../my_String/my_string.h ../my_string/My_string.cpp ../my_string/My_string.h ../../CPP/test/exercise/2.cpp ../../CPP/test/exercise/3.cpp ../../CPP/test/exercise/fun_pass.h)